# svcs-di

./: Justfile  LICENSE  README.md  conftest.py  pyproject.toml
.claude/: settings.local.json
.claude/skills/: specs-into-sphinx.md
.github/workflows/: ci.yml  pages.yml
agent-os/: config.yml
agent-os/product/: mission.md  roadmap.md  tech-stack.md
agent-os/skills/: svcs.md
docs/: conf.py  conftest.py  core-concepts.md  dataclass-support.md  functions.md  index.md  initial_spec.md
docs/examples/: async_injection.md  basic_dataclass.md  basic_function.md  basic_injection.md  custom_injector.md  index.md  init_var.md  (+6 more)
examples/: async_injection.py  basic_dataclass.py  basic_function.py  basic_injection.py  custom_construction.py  custom_injector.py  kwargs_override.py  location_based_resolution.py  multiple_implementations.py  override_registration.py  protocol_injection.py  registered_injector.py
research/: README.md  attrs-integration.md  function_implementations.md  functions.md  hopscotch_registry_plan.md  initial_spec.md  internals-to-attrs.md
scripts/: extract_specs.py  generate_specs_index.py
tests/: test_async_function_factories.py  test_auto.py  test_callable_registration.py  test_dataclass_features.py  test_examples.py  test_extract_specs.py  test_free_threading.py  test_function_implementations_gaps.py  test_function_parameter_injection.py  test_hopscotch_registry.py  test_hopscotch_resource_location.py  test_init_var_injection.py  test_inject_container.py  test_injectable.py  test_injector.py  test_injector_container.py  test_locator.py
(+206 files in other folders)
