[project]
name = "svcs-di"
version = "0.1.0"
description = "Dependency injection using svcs"
requires-python = ">=3.14"
dependencies = [
    "svcs"
]

[dependency-groups]
dev = [
    "coverage>=7.11.2",
    "furo>=2024.8.6",
    "linkify-it-py>=2.0.3",
    "myst-parser>=4.0.0",
    "pytest>=8.4.2",
    "pytest-cov>=4.1.0",
    "pytest-freethreaded>=0.1.0",
    "pytest-timeout>=2.4.0",
    "pytest-xdist>=3.6.1",
    "ruff>=0.13.2",
    "sphinx>=8.0.0",
    "sphinx-autobuild>=2024.9.3",
    "sybil[pytest]>=8.0.0",
    "ty>=0.0.4",
]

[tool.pytest.ini_options]
testpaths = ["tests", "src", "docs"]
python_files = ["test_*.py"]
addopts = "-p no:doctest -p no:freethreaded -m \"not slow\""
pythonpath = ["examples"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]
# Free-threading safety: timeout tests to detect hangs/deadlocks
timeout = 60
faulthandler_timeout = 120

[build-system]
requires = ["uv_build>=0.8.17,<0.9.0"]
build-backend = "uv_build"
